<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dragon_ball_orange_light"
    tools:context=".ui.pantallaDetalleCharacter.DetalleFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/dragon_ball_blue"
            app:statusBarScrim="@color/dragon_ball_blue"
            app:expandedTitleTextAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:collapsedTitleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleTextColor="@color/white"
            app:collapsedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/ivCharacterDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/backgrounds/scenic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:layout_gravity="bottom"
                android:background="@drawable/scrim_gradient"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardKi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/dragon_ball_blue_light"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toStartOf="@+id/cardRace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvKiLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ki"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvKi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvKiLabel"
                        tools:text="60,000,000" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardRace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                app:cardBackgroundColor="@color/dragon_ball_blue_light"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardKi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardKi"
                app:layout_constraintTop_toTopOf="@id/cardKi">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvRaceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/race"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvRace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvRaceLabel"
                        tools:text="Saiyan" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/dragon_ball_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardKi" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionLabel"
                tools:text="Goku is the main protagonist of the Dragon Ball series. He is a Saiyan sent to Earth as an infant with the mission to destroy it..." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit_character"
        app:backgroundTint="@color/dragon_ball_yellow"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_edit"
        app:tint="@color/dragon_ball_blue" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
